// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Person dataSource gets persons dataview associations 1`] = `Object {}`;

exports[`Person dataSource gets persons dataview associations 2`] = `
Array [
  Array [
    "DataViews/GetPersistedDataViewsForEntity/15/51?categoryId=undefined&%24select=Guid",
    Object {},
    Object {},
  ],
]
`;

exports[`Person dataSource gets persons dataview associations from plugin endpoints 1`] = `Object {}`;

exports[`Person dataSource gets persons dataview associations from plugin endpoints 2`] = `
Array [
  Array [
    "Apollos/GetPersistedDataViewsForEntity/15/51?categoryId=210&%24select=Guid",
    Object {},
    Object {},
  ],
]
`;
